# efichess

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake.toml
include/: efi.h  efi_boot_service_table.h  efi_runtime_services.h  efi_system_table.h  efi_types.h
include/proto/: device_path.h  image_load.h
include/proto/console/: simple_text_io.h
src/: main.c
src/include/: chess.h
tests/: main.c
